# star-organizer

./: .env.example  .gitignore  README.md  pyproject.toml
.cursor/skills/: code-review.md
_dev/: smoke_test.py  test_interactive.py  test_live.sh  test_loop.py  visual_demo.py
star_organizer/: __main__.py  awesome.py  categorizer.py  dashboard.py  dead.py  display.py  github_client.py  github_sync.py  main.py  models.py  pipeline.py  prompt_style.py  rate_limiter.py  stale.py  store.py
